--- a/ProductCentralProject-Automation/.classpath
+++ b/ProductCentralProject-Automation/.classpath
@@ -6,11 +6,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="test" value="true"/>
@@ -26,7 +21,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="module" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
@@ -58,15 +53,12 @@
 	<classpathentry kind="lib" path="C:/Users/erong/libs/jar_files (1)/selenium-remote-driver-3.14.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/erong/libs/jar_files (1)/selenium-safari-driver-3.14.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/erong/libs/jar_files (1)/selenium-support-3.14.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/erong/.m2/repository/org/testng/testng/6.8/testng-6.8.jar" sourcepath="C:/Users/erong/.m2/repository/org/testng/testng/6.8/testng-6.8-sources.jar">
+	<classpathentry kind="lib" path="C:/Users/erong/Desktop/log4j.jar"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="maven.groupId" value="org.testng"/>
-			<attribute name="maven.artifactId" value="testng"/>
-			<attribute name="maven.version" value="6.8"/>
-			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/erong/Desktop/log4j.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
